# ml-cross-sectional

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.zh-TW.md
notebooks/: 01_feature_eda.ipynb  02_training_walkforward.ipynb  03_shap_analysis.ipynb  04_backtest.ipynb  05_robustness_tw_btc.ipynb  06_neutralized_backtest.ipynb
scripts/: build_01_feature_eda.py  build_02_training_walkforward.py  build_03_shap_analysis.py  build_04_backtest.py  build_05_robustness_tw_btc.py  build_features.py  download_data.py  download_sector_beta.py
src/mlcs/: features.py  model.py  validation.py
tests/: test_features.py  test_model.py  test_validation.py
